--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="none"
         android:gravity="center"
-        android:text="@string/changeLangButton"
+        android:text="@string/changeLangList"
         android:textSize="24sp"
         android:textColor="@color/secondaryOn"
         app:autoSizeTextType="uniform"
@@ -28,7 +28,7 @@
         app:layout_constraintVertical_bias="0.3"/>
 
     <Button
-        android:id="@+id/btnButton"
+        android:id="@+id/btnList"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/btn_basic"
