--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,12 @@
 
     <Button
         android:id="@+id/btnList"
-        android:layout_width="80dp"
+        android:layout_width="150dp"
         android:layout_height="80dp"
         android:background="@drawable/btn_basic"
         android:backgroundTint="@color/secondary"
+        android:text="@string/list"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -61,10 +63,12 @@
 
     <Button
         android:id="@+id/btnSpinner"
-        android:layout_width="80dp"
+        android:layout_width="150dp"
         android:layout_height="80dp"
         android:background="@drawable/btn_basic"
         android:backgroundTint="@color/secondary"
+        android:text="@string/spinner"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
